build/log/idf_py_stdout_output_309019
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/gijs/Documents/espidfProjects/modcon-drone/build/bootloader/esp-idf/esptool_py && /home/gijs/.espressif/python_env/idf5.5_py3.12_env/bin/python /home/gijs/esp/esp-idf-v5.5.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/gijs/Documents/espidfProjects/modcon-drone/build/bootloader/bootloader.bin
Bootloader binary size 0x6680 bytes. 0x980 bytes (8%) free.
[2/9] No install step for 'bootloader'
[3/9] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj 
/home/gijs/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.5.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/gijs/Documents/espidfProjects/modcon-drone/build/config -I/home/gijs/esp/esp-idf-v5.5.1/components/newlib/platform_include -I/home/gijs/esp/esp-idf-v5.5.1/components/freertos/config/include -I/home/gijs/esp/esp-idf-v5.5.1/components/freertos/config/include/freertos -I/home/gijs/esp/esp-idf-v5.5.1/components/freertos/config/xtensa/include -I/home/gijs/esp/esp-idf-v5.5.1/components/freertos/FreeRTOS-Kernel/include -I/home/gijs/esp/esp-idf-v5.5.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/gijs/esp/esp-idf-v5.5.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/gijs/esp/esp-idf-v5.5.1/components/freertos/esp_additions/include -I/home/gijs/esp/esp-idf-v5.5.1/components/esp_hw_support/include -I/home/gijs/esp/esp-idf-v5.5.1/components/esp_hw_support/include/soc -I/home/gijs/esp/esp-idf-v5.5.1/components/esp_hw_support/include/soc/esp32 -I/home/gijs/esp/esp-idf-v5.5.1/components/esp_hw_support/dma/include -I/home/gijs/esp/esp-idf-v5.5.1/components/esp_hw_support/ldo/include -I/home/gijs/esp/esp-idf-v5.5.1/components/esp_hw_support/debug_probe/include -I/home/gijs/esp/esp-idf-v5.5.1/components/esp_hw_support/mspi_timing_tuning/include -I/home/gijs/esp/esp-idf-v5.5.1/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/gijs/esp/esp-idf-v5.5.1/components/esp_hw_support/power_supply/include -I/home/gijs/esp/esp-idf-v5.5.1/components/esp_hw_support/port/esp32/. -I/home/gijs/esp/esp-idf-v5.5.1/components/esp_hw_support/port/esp32/include -I/home/gijs/esp/esp-idf-v5.5.1/components/heap/include -I/home/gijs/esp/esp-idf-v5.5.1/components/heap/tlsf -I/home/gijs/esp/esp-idf-v5.5.1/components/log/include -I/home/gijs/esp/esp-idf-v5.5.1/components/soc/include -I/home/gijs/esp/esp-idf-v5.5.1/components/soc/esp32 -I/home/gijs/esp/esp-idf-v5.5.1/components/soc/esp32/include -I/home/gijs/esp/esp-idf-v5.5.1/components/soc/esp32/register -I/home/gijs/esp/esp-idf-v5.5.1/components/hal/platform_port/include -I/home/gijs/esp/esp-idf-v5.5.1/components/hal/esp32/include -I/home/gijs/esp/esp-idf-v5.5.1/components/hal/include -I/home/gijs/esp/esp-idf-v5.5.1/components/esp_rom/include -I/home/gijs/esp/esp-idf-v5.5.1/components/esp_rom/esp32/include -I/home/gijs/esp/esp-idf-v5.5.1/components/esp_rom/esp32/include/esp32 -I/home/gijs/esp/esp-idf-v5.5.1/components/esp_rom/esp32 -I/home/gijs/esp/esp-idf-v5.5.1/components/esp_common/include -I/home/gijs/esp/esp-idf-v5.5.1/components/esp_system/include -I/home/gijs/esp/esp-idf-v5.5.1/components/esp_system/port/soc -I/home/gijs/esp/esp-idf-v5.5.1/components/esp_system/port/include/private -I/home/gijs/esp/esp-idf-v5.5.1/components/xtensa/esp32/include -I/home/gijs/esp/esp-idf-v5.5.1/components/xtensa/include -I/home/gijs/esp/esp-idf-v5.5.1/components/xtensa/deprecated_include -I/home/gijs/esp/esp-idf-v5.5.1/components/spi_flash/include -I/home/gijs/esp/esp-idf-v5.5.1/components/esp_driver_gpio/include -I/home/gijs/esp/esp-idf-v5.5.1/components/esp_driver_i2c/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/gijs/Documents/espidfProjects/modcon-drone=. -fmacro-prefix-map=/home/gijs/esp/esp-idf-v5.5.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -fuse-cxa-atexit -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj -c /home/gijs/Documents/espidfProjects/modcon-drone/main/main.cpp
/home/gijs/Documents/espidfProjects/modcon-drone/main/main.cpp: In function 'void app_main()':
/home/gijs/Documents/espidfProjects/modcon-drone/main/main.cpp:26:28: error: 'datasend' was not declared in this scope; did you mean 'datasend1'?
   26 |   size_t lensend1 = sizeof(datasend);
      |                            ^~~~~~~~
      |                            datasend1
In file included from /home/gijs/esp/esp-idf-v5.5.1/components/esp_hw_support/include/esp_intr_alloc.h:12,
                 from /home/gijs/esp/esp-idf-v5.5.1/components/esp_hw_support/include/esp_cpu.h:21,
                 from /home/gijs/esp/esp-idf-v5.5.1/components/esp_hw_support/include/spinlock.h:11,
                 from /home/gijs/esp/esp-idf-v5.5.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos/portmacro.h:49,
                 from /home/gijs/esp/esp-idf-v5.5.1/components/freertos/FreeRTOS-Kernel/include/freertos/portable.h:57,
                 from /home/gijs/esp/esp-idf-v5.5.1/components/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:69,
                 from /home/gijs/Documents/espidfProjects/modcon-drone/main/main.cpp:2:
/home/gijs/Documents/espidfProjects/modcon-drone/main/main.cpp:38:71: error: 'lensend' was not declared in this scope; did you mean 'lensend2'?
   38 |     ESP_ERROR_CHECK(i2c_master_transmit_receive(dev_handle, datasend, lensend, &datarec, lenrec, I2C_MASTER_TIMEOUT_MS / portTICK_PERIOD_MS));
      |                                                                       ^~~~~~~
/home/gijs/esp/esp-idf-v5.5.1/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
/home/gijs/Documents/espidfProjects/modcon-drone/main/main.cpp:31:11: warning: unused variable 'datasend2' [-Wunused-variable]
   31 |   uint8_t datasend2[2] = {0x00, 0x62};
      |           ^~~~~~~~~
/home/gijs/Documents/espidfProjects/modcon-drone/main/main.cpp:32:10: warning: unused variable 'lensend2' [-Wunused-variable]
   32 |   size_t lensend2 = sizeof(datasend);
      |          ^~~~~~~~
/home/gijs/Documents/espidfProjects/modcon-drone/main/main.cpp: In function 'void i2c_master_init(i2c_master_bus_t**, i2c_master_dev_t**)':
/home/gijs/Documents/espidfProjects/modcon-drone/main/main.cpp:54:3: warning: missing initializer for member 'i2c_master_bus_config_t::intr_priority' [-Wmissing-field-initializers]
   54 |   };
      |   ^
/home/gijs/Documents/espidfProjects/modcon-drone/main/main.cpp:54:3: warning: missing initializer for member 'i2c_master_bus_config_t::trans_queue_depth' [-Wmissing-field-initializers]
/home/gijs/Documents/espidfProjects/modcon-drone/main/main.cpp:54:3: warning: missing initializer for member 'i2c_master_bus_config_t::flags' [-Wmissing-field-initializers]
/home/gijs/Documents/espidfProjects/modcon-drone/main/main.cpp:61:3: warning: missing initializer for member 'i2c_device_config_t::scl_wait_us' [-Wmissing-field-initializers]
   61 |   };
      |   ^
/home/gijs/Documents/espidfProjects/modcon-drone/main/main.cpp:61:3: warning: missing initializer for member 'i2c_device_config_t::flags' [-Wmissing-field-initializers]
[4/9] Completed 'bootloader'
ninja: build stopped: subcommand failed.
